Add new endpoints and JPA layer